--- a/InstaStay/Views/Shared/_Layout.cshtml
+++ b/InstaStay/Views/Shared/_Layout.cshtml
@@ -96,9 +96,8 @@
                             </li>
                         }
                     </ul>
-
                     <div class="dropdown">
-                        <button class="btn btn-outline-info bg-gradient theme-icon light-theme" type="button" id="themeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-outline-info bg-gradient theme-icon light-theme ms-1" type="button" id="themeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-lightbulb"></i>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="themeDropdown">
