--- a/InstaStay/Areas/HotelManager/Views/ManageHotel/ShowAllHotels.cshtml
+++ b/InstaStay/Areas/HotelManager/Views/ManageHotel/ShowAllHotels.cshtml
@@ -8,10 +8,8 @@
     <h2 class="text-center mb-4">
         <i class="fas fa-hotel me-2"></i> Manage Hotels
     </h2>
-
-    <!-- Table -->
     <div class="table-responsive mx-5">
-        <table class="table table-striped table-hover table-bordered align-middle">
+        <table class="table table-striped table-hover table-bordered border-dark align-middle text-center">
             <thead class="table-dark text-center">
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.Name)</th>
@@ -42,7 +40,7 @@
                         <td>@item.ContactInfo</td>
                         <td class="text-center">
                             <div class="dropdown">
-                                <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownActions-@item.Id" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="btn btn-sm btn-outline-info dropdown-toggle" type="button" id="dropdownActions-@item.Id" data-bs-toggle="dropdown" aria-expanded="false">
                                     Actions
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownActions-@item.Id">
